--- a/package.json
+++ b/package.json
@@ -1,22 +1,36 @@
 {
-  "name": "backend",
+  "name": "nammqi-schedules",
   "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
+  "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "dev": "nodemon src/app.js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "online",
+    "ta'lim",
+    "backend",
+    "nodejs",
+    "express",
+    "sqlite3"
+  ],
+  "author": "Murodillayev Hojiakbar",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "googleapis": "^146.0.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.7.2",
+    "nodemon": "^3.1.7",
+    "sqlite3": "^5.1.7",
+    "swagger-ui-express": "^5.0.1",
+    "uuid": "^11.1.0"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.7"
-  }
+  },
+  "description": "A backend for Nammqi Schedules"
 }
