--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.7",
     "sqlite3": "^5.1.7",
+    "stream": "^0.0.3",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0"
   },
