--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "express": "^4.21.1",
     "googleapis": "^146.0.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.7",
     "sqlite3": "^5.1.7",
     "stream": "^0.0.3",
     "swagger-ui-express": "^5.0.1",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
