--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "sqlite3": "^5.1.7",
     "stream": "^0.0.3",
     "swagger-ui-express": "^5.0.1",
+    "transliteration": "^2.3.5",
     "uuid": "^11.1.0",
     "xlsx": "^0.18.5"
   },
